# Media-bot

./: .gitignore  Justfile  README.md  download.py  links.md  main.py  ptb.py  pyproject.toml  telethon_bot.py
.github/workflows/: lint.yml
mediabot/: __init__.py  backup.py  config.py  download.py  helper.py  link_handling.py  media_info.py
mediabot/adapters/: ytdlp.py
mediabot/handlers/: imgur.py  reddit.py  youtube.py
mediabot/telethon/: __init__.py  files.py  imgur.py  management.py  media.py  reddit.py  youtube.py
