[tool.poetry]
name = "Media-bot"
version = "0.0.1"
description = "A project for fetching media from various sources into a telegram chat."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/reddit-media-bot"

[tool.poetry.dependencies]
python = ">=3.10, <4"
alembic = "^1"
beautifulsoup4 = "^4"
raven = "^6"
requests = "^2"
telethon = "^1"
toml = "^0"
typer = "^0.6"
yt-dlp = "^2022.5.18"

[tool.poetry.dev-dependencies]
autoflake = "^1"
black = "^22"
flake8 = "^5"
isort = "^5"
types-toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"
